<resources>
    <string name="app_name">sangeet</string>
    <string name="shuffle_btu">Shuffle</string>
    <string name="favourites_btu">Favourites</string>
    <string name="playlist_btu">Playlist</string>
    <string name="song_name">Song Name</string>
    <string name="world_of_music">World of Music</string>
    <string name="back">back</string>
    <string name="start">00:00</string>
    <string name="end">loading…</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="song_album">Song Album</string>
</resources>