<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            app:tint="@color/black"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/world_of_music"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="1"/>


    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songimgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/music_icon"
        android:layout_margin="24dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

    <TextView
        android:id="@+id/songnamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousbtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/back_icon"
            app:iconSize="40dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playpause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="30dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@color/red"
            app:iconTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextbtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/seekbarstart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/start"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/seekbarend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/end"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>